tests/compile_fail/id_not_interchangeable.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/id_not_interchangeable.rs:10:24
   |
10 |     takes_container_id(network_id); // ERROR: expected ContainerId, found NetworkId
   |     ------------------ ^^^^^^^^^^ expected `Id<ContainerMarker>`, found `Id<NetworkMarker>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `types::id::Id<types::id::ContainerMarker>`
              found struct `types::id::Id<types::id::NetworkMarker>`
note: function defined here
  --> tests/compile_fail/id_not_interchangeable.rs:6:4
   |
 6 | fn takes_container_id(_id: ContainerId) {}
   |    ^^^^^^^^^^^^^^^^^^ ----------------
